# beatcharts_outdated

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Bit_stream.h  CMakeLists.txt  codebook.cpp  codebook.h  crc.c  crc.h  decoder_texture.cpp  errors.h  ww2ogg.cpp  wwriff.cpp  wwriff.h
app/src/main/res/anim/: alpha_fade_in.xml  alpha_fade_out.xml  alpha_light.xml  alpha_scale_open.xml
app/src/main/res/drawable/: angle_right.xml  arrow.xml  arrow_circle_right.xml  arrow_item_selected.xml  backgroud_l_a_light.xml  backgroud_prefrect_p_gradient.xml  backgroud_shadow.xml  backgroud_shadow_right.xml  beatstarsvg.xml  card_button_stroke.xml  card_colored_a.xml  card_colored_a_faded.xml  card_colored_b.xml  card_colored_bg_def.xml  card_colored_dark_faded.xml  card_colored_extreme.xml  card_colored_hard.xml  card_colored_light_faded.xml  card_colored_normal.xml  card_hover_button.xml  card_outline_white.xml  clipboard.xml  clock.xml  cloud_download.xml  compass.xml  crop.xml  discord.xml  envelope.xml  estate.xml  external_link_alt.xml  eye.xml  eye_slash.xml  file.xml  folder.xml  green_dot_inside.xml  green_dot_outside.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  info_circle.xml  key_skeleton_alt.xml  (+15 more)
app/src/main/res/drawable-v24/: gradient_a_to_alpha.xml  gradient_a_to_alpha_rotated.xml  gradient_d_to_alpha.xml
app/src/main/res/font/: sans.xml
app/src/main/res/layout/: activity_community.xml  (+34 more)
gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
